test: added DacTools.Deployment.Core.Tests project to the solution
Added two files with tests for the Log and LogExtensions classes.

This commit also adds test.msbuild a file that will set common PackageReferences between all of the eventual test projects. The versions for these packages are stored centrally in Directory.Build.props.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,4 +7,11 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Company>$(Authors)</Company>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageVersion_MicrosoftTestSdk>16.3.0</PackageVersion_MicrosoftTestSdk>
+    <PackageVersion_xunit>2.4.1</PackageVersion_xunit>
+    <PackageVersion_Shouldly>3.0.2</PackageVersion_Shouldly>
+    <PackageVersion_Moq>4.13.1</PackageVersion_Moq>
+  </PropertyGroup>
 </Project>
