--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -13,7 +13,8 @@
 
   <PropertyGroup>
     <PackageVersion_MicrosoftTestSdk>16.3.0</PackageVersion_MicrosoftTestSdk>
-    <PackageVersion_xunit>2.4.1</PackageVersion_xunit>
+    <PackageVersion_XUnit>2.4.1</PackageVersion_XUnit>
+    <PackageVersion_XUnitRunnerVisualStudio>2.4.1</PackageVersion_XUnitRunnerVisualStudio>
     <PackageVersion_Shouldly>3.0.2</PackageVersion_Shouldly>
     <PackageVersion_Moq>4.13.1</PackageVersion_Moq>
   </PropertyGroup>
