ci: potentially fixed Xunit.Runner.VisualStudio error on Mono

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -15,6 +15,7 @@
     <PackageVersion_MicrosoftTestSdk>16.3.0</PackageVersion_MicrosoftTestSdk>
     <PackageVersion_XUnit>2.4.1</PackageVersion_XUnit>
     <PackageVersion_XUnitRunnerVisualStudio>2.4.1</PackageVersion_XUnitRunnerVisualStudio>
+    <PackageVersion_XUnitRunnerMSBuild>2.4.1</PackageVersion_XUnitRunnerMSBuild>
     <PackageVersion_Shouldly>3.0.2</PackageVersion_Shouldly>
     <PackageVersion_Moq>4.13.1</PackageVersion_Moq>
   </PropertyGroup>
