--- a/test/DacTools.Deployment.Core.Tests/DacTools.Deployment.Core.Tests.csproj
+++ b/test/DacTools.Deployment.Core.Tests/DacTools.Deployment.Core.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net472;netcoreapp2.1;netcoreapp3.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.1;netcoreapp3.0</TargetFrameworks>
 
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
