feat(deployment): setup DacTools.Deployment project
This project will eventually be the EXE as well as the dotnet tool for running deployments. This project uses Microsoft.Extensions.Hosting and a couple of the components of DacTools.Deployment.Core were reworked to support this as we now have DependencyInjection available.

The CI build pipeline was also changed as the EXE supports .NET Framework 472, but this is only built/tested on Windows agents.

--- a/test/DacTools.Deployment.Core.Tests/DacTools.Deployment.Core.Tests.csproj
+++ b/test/DacTools.Deployment.Core.Tests/DacTools.Deployment.Core.Tests.csproj
@@ -1,18 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp3.0</TargetFrameworks>
+    <PropertyGroup>
+        <TargetFrameworks>netcoreapp2.1;netcoreapp3.0</TargetFrameworks>
 
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <DebugSymbols>true</DebugSymbols>
-    <LangVersion>8.0</LangVersion>
-  </PropertyGroup>
+        <DebugType>full</DebugType>
+        <Optimize>false</Optimize>
+        <DebugSymbols>true</DebugSymbols>
+        <LangVersion>8.0</LangVersion>
+    </PropertyGroup>
 
-  <Import Project="..\test.msbuild" />
+    <PropertyGroup Condition=" '$(ExcludeFramework)' != 'true'">
+        <TargetFrameworks>net472;$(TargetFrameworks);</TargetFrameworks>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\DacTools.Deployment.Core\DacTools.Deployment.Core.csproj" />
-  </ItemGroup>
+    <Import Project="..\test.msbuild" />
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\src\DacTools.Deployment.Core\DacTools.Deployment.Core.csproj" />
+    </ItemGroup>
 
 </Project>
