ci: corrected dependentOn to dependsOn in azure-pipelines.yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
     - template: build/stages/build.yml
 
 - stage: Publish
-  dependentOn: Build
+  dependsOn: Build
   condition: succeeded()
   jobs:
   - job: Publish
