--- a/src/DacTools.Deployment.Core/DacTools.Deployment.Core.csproj
+++ b/src/DacTools.Deployment.Core/DacTools.Deployment.Core.csproj
@@ -5,7 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="1.0.19269.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0" />
     </ItemGroup>
 
 </Project>
