--- a/src/DacTools.Deployment/DacTools.Deployment.csproj
+++ b/src/DacTools.Deployment/DacTools.Deployment.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>netcoreapp2.1;netcoreapp3.0</TargetFrameworks>
+        <TargetFrameworks>netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
         <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
 
