--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,9 @@ _ReSharper*/
 *.[Rr]e[Ss]harper
 *.DotSettings.user
 
+# JetBrains Rider Files
+.idea
+
 # JustCode is a .NET coding add-in
 .JustCode
 
