--- a/test/DacTools.Deployment.Core.Tests/DacTools.Deployment.Core.Tests.csproj
+++ b/test/DacTools.Deployment.Core.Tests/DacTools.Deployment.Core.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp2.1;netcoreapp3.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
 
         <IsPackable>false</IsPackable>
         <DebugType>full</DebugType>
