--- a/src/DacTools.Deployment/DacTools.Deployment.csproj
+++ b/src/DacTools.Deployment/DacTools.Deployment.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>net5.0;netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>net6.0;net5.0;netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
         <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
 
