--- a/test/Directory.build.props
+++ b/test/Directory.build.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
-        <TargetFrameworks>net5.0;netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>net6.0;net5.0;netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
         <LangVersion>latest</LangVersion>
 
         <IsPackable>false</IsPackable>
