--- a/test/DacTools.Deployment.Core.Tests/DacTools.Deployment.Core.Tests.csproj
+++ b/test/DacTools.Deployment.Core.Tests/DacTools.Deployment.Core.Tests.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+    <PropertyGroup>
+        <TargetFrameworks>net6.0;net5.0;netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
+    </PropertyGroup>
+
     <PropertyGroup Condition=" '$(ExcludeFramework)' != 'true'">
         <TargetFrameworks>net472;$(TargetFrameworks);</TargetFrameworks>
     </PropertyGroup>
