build(core)!: upgrade to netstandard2.1

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,6 +8,7 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Company>$(Authors)</Company>
 
+        <LangVersion>latest</LangVersion>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <WarningsAsErrors />
     </PropertyGroup>
