build: enable nullable reference types

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,6 +9,7 @@
         <Company>$(Authors)</Company>
 
         <LangVersion>latest</LangVersion>
+        <Nullable>enable</Nullable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <WarningsAsErrors />
     </PropertyGroup>
