ci: complete rework of build pipeline for github actions
This commit completely reworks the build pipeline to both use
Cake.Frosting in a full CI VS Solution as well as switching to using
GitHub Actions.

--- a/.gitignore
+++ b/.gitignore
@@ -356,7 +356,11 @@ MigrationBackup/
 .ionide/
 
 # Cake
-tools/*
+tools
+run
+artifacts
+!build/Publish
+!build/Release
 
 # Ignore Launch Settings
 launchsettings.json
