--- a/src/DacTools.Deployment.Core/DacTools.Deployment.Core.csproj
+++ b/src/DacTools.Deployment.Core/DacTools.Deployment.Core.csproj
@@ -5,11 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0"/>
-        <PackageReference Include="Microsoft.SqlServer.DacFx" Version="150.5164.1"/>
-        <PackageReference Include="System.Threading.Tasks.Dataflow" Version="5.0.0"/>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+        <PackageReference Include="Microsoft.SqlServer.DacFx" Version="160.5400.1-preview" />
+        <PackageReference Include="System.Threading.Tasks.Dataflow" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
