--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -40,6 +40,11 @@ jobs:
       with:
         fetch-depth: 0
     -
+      name: Install .NET SDK 5.0.x
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '5.0.x'
+    -
       name: Install .NET SDK 6.0.x
       uses: actions/setup-dotnet@v1
       with:
